# gh-star-sorter

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  justfile  pyproject.toml  requirements.txt
app/: crud.py  database.py  github.py  kanboard.py  main.py  models.py  schemas.py
templates/: _flash_message.html  _navbar.html  _repo_table.html  _repo_tags.html  index.html
