[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gh-star-sorter"
dynamic = ["version"]
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.13",
    "itsdangerous>=2.2.0",
    "jinja2>=3.1.6",
    "python-dotenv>=1.1.0",
    "python-multipart>=0.0.20",
    "requests>=2.32.4",
    "sqlalchemy>=2.0.41",
    "uvicorn>=0.34.3",
]

[tool.hatch.version]
path = "app/__about__.py"

[tool.hatch.build.targets.wheel]
packages = ["app"]

